edit code step 3

--- a/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.scss
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.scss
@@ -83,7 +83,13 @@
       .infor-contract {
         color: black !important;
         font-size: 13px !important;
-
+        .text-decoration-style {
+          color: #106DB6;
+          cursor: pointer
+        }
+        .text-decoration-style:hover {
+          text-decoration: underline;
+        }
       }
     }
 
