--- a/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
@@ -5,30 +5,34 @@
     <div class="sample-contract__information--drag" id="width-element-info" style="margin-top: 15px">
       <div style="padding-bottom: 10px; text-align: center" class="label">THÔNG TIN CHI TIẾT HỢP ĐỒNG</div>
       <div class="label infor-contract" style="line-height: 25px;">
-        <div>
-          <span class="title-contract">Loại hợp đồng:</span>
-          <span>{{datas.contract_information.type_contract}}</span>
+        <div class="type-contract">
+          <div style="display: inline-block; padding-right: 5px">Loại hợp đồng:</div>
+<!--          <span>{{datas.contractType}}</span>-->
+          <div style="display: inline-block" *ngFor="let d of this.datas.type_id; let i = index">
+            <span>{{d.item_text}}</span>
+            <span>{{i == (this.datas.type_id.length - 1) ? '' : ', '}}</span>
+          </div>
         </div>
-        <div>
-          <span class="title-contract">Tên hợp đồng:</span>
-          <span>{{datas.contract_information.name_contract}}</span>
+        <div class="name-contract">
+          <div class="title-contract" style="display: inline-block">Tên hợp đồng:</div>
+          <div style="display: inline-block">{{datas.name}}</div>
         </div>
-        <div>
-          <span class="title-contract">Số hợp đồng:</span>
-          <span>{{datas.contract_information.number_contract}}</span>
+        <div class="number-contract">
+          <div class="title-contract" style="display: inline-block">Số hợp đồng:</div>
+          <div style="display: inline-block">{{datas.code}}</div>
         </div>
-        <div>
-          <span class="title-contract">File đính kèm:</span>
-          <span>
-            <a *ngFor="let d of this.datas.contract_information.file_attach" style="color: #106DB6" rel="stylesheet"
-               href="https://vnexpress.net/" target="_blank">{{d.file_name}}</a>
-          </span>
+        <div class="file-attach-contract">
+          <div class="title-contract" style="display: inline-block">File đính kèm:</div>
+          <div style="display: inline-block">
+            <span class="text-decoration-style">{{this.datas.attachFile.name}}</span>
+          </div>
         </div>
-        <div>
-          <span class="title-contract">Hợp đồng liên quan:</span>
-          <span *ngFor="let d of this.datas.contract_information.file_related_contract" style="color: #106DB6">
-            {{d.file_name}} <span style="color: black">, </span>
-          </span>
+        <div class="contract-coordination">
+          <div class="title-contract" style="display: inline-block">Hợp đồng liên quan:</div>
+          <div style="display: inline-block" *ngFor="let d of this.datas.contractConnect; let i = index">
+            <span class="text-decoration-style">{{d.item_text}}</span>
+            <span>{{i == (this.datas.contractConnect.length - 1) ? '' : ', '}}</span>
+          </div>
         </div>
       </div>
     </div>
@@ -37,8 +41,9 @@
     <div class="location-change" [ngStyle]="changeDisplay()">
       <div class="sample-contract__information--user-sign" style="line-height: 25px">
         <div style="text-align: center;" class="label">CÁC BÊN LIÊN QUAN</div>
-        <div *ngFor="let d of this.datas.contract_related">
-          <span class="label" style="color: black; font-size: 13px">{{d.name_company}}</span>
+        <div>{{datas.userForm.name}}</div>
+        <div *ngFor="let d of this.datas.partnerForm.partnerArrs">
+          <span class="label" style="color: black; font-size: 13px">{{d.name}}</span>
         </div>
 
       </div>
