--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
@@ -78,15 +78,15 @@
   <div class="col-md-9 sample-contract__file viewer-pdf isDrag" style="background-color: #f3f7f9; position: relative">
     <div id="pdf-viewer-step-3">
       <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
-        <div class="resize-drag not-out-drop"
+        <div
              [id]="d.id"
              style="z-index: -1"
              #itemElement
              (click)="getSignSelect(d)"
-             [ngClass]="changeColorDrag(null, true)"
+             [ngClass]="getContractSign(d)"
              [ngStyle]="changePosition(d)">
           <div class="name-sig-img-daky">{{d.name ? d.name : ''}}</div>
-          <div *ngIf="d.signature_party == 'partner'" class="sig-img-daky" (click)="onCancel($event, d)">
+          <div *ngIf="d.signature_party != 'organization' || !d.position" class="sig-img-daky" (click)="onCancel($event, d)">
             <img src="assets/img/clear.svg" alt="">
             <img src="assets/img/border-clear.svg" alt="">
           </div>
