--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div style="text-align: center; font-weight: bold">
-    <h3 style="color: #106DB6; font-weight: bold">{{this.datas.title}}</h3>
+    <h3 style="color: #106DB6;">{{this.datas.title}}</h3>
   </div>
   <form (ngSubmit)="onSubmit()" [formGroup]="myForm" class="content">
     <div class="name-item">
