--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/confirm-info-contract/confirm-info-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/confirm-info-contract/confirm-info-contract.component.html
@@ -120,9 +120,9 @@
   </div>
 </div>
 <div class="footer-infor-contract">
-<!--  <div style="width: 200px;">-->
-<!--    <button (click)="back($event, 'sample-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>-->
-<!--  </div>-->
+  <div style="width: 200px;">
+    <button (click)="back($event, 'sample-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
+  </div>
 <!--  <div class="content_footer"></div>-->
 <!--  <div>-->
 <!--    <button type="button" name="next" class="next draft-button">Lưu nháp</button>-->
