--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
@@ -6,7 +6,7 @@
       <button type="button" name="next" class="next action-button" (click)="forWardContract()">Chuyển tiếp</button>
     </div>
     <div>
-      <button type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Từ chối</button>
+      <button  *ngIf="![1, 2].includes(datas.roleContractReceived)" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Từ chối</button>
       <button (click)="action()" type="button" name="next" class="next action-button">{{this.datas.action_title}}</button>
     </div>
   </div>
